improvrd the design by reducing the wording and adding our stories page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="./styles/general-style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link
@@ -13,6 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
     <title>Friends of Fuo</title>
     <script src="./scripts/index.js" defer></script>
+    <script src="./scripts/general.js" defer></script>
   </head>
   <body>
     <nav data-aos="fade-down">
@@ -76,12 +78,15 @@
     <main>
       <section class="hero-section">
         <div class="hero-overlay-text" data-aos="fade-up">
-          <h1>When we equip a classroom, we empower a generation</h1>
+          <h1>
+            Determed Students. Dedicated Teachers.<br />Equipping today,
+            Empowering Generations
+          </h1>
           <p>
-            In Fuo AME Zion Basic School, children learn without desks, books,
-            or the basic tools they need to succeed. With your support, we can
-            transform empty classrooms into spaces of hope and possibility - one
-            desk,one book, one child at a time
+            Students of Fuo AME Zion Basic School in Tamale, Ghana are eager to
+            learn. With your support, we provide desks, classroom resources, and
+            educational opportunities that restore dignity and open doors for
+            thei future.
           </p>
         </div>
 
@@ -90,8 +95,8 @@
           data-aos="zoom-in-up"
           data-duration="3000"
         >
-          <a href="" class="button get-involved-button">Get Involved</a>
-          <a href="" class="button donate-button">Donate</a>
+          <a href="" class="button see-impact-button">See our Impact</a>
+          <a href="" class="button donate-button">Donate Now</a>
         </div>
       </section>
       <div class="gradient-overlay"></div>
@@ -107,7 +112,7 @@
               students can learn in a safe, supportive, and dignified
               environment.
             </p>
-            <a href="" class="button" data-aos="zoom-in-up">DONATE</a>
+            <a href="" class="button" data-aos="zoom-in-up">DONATE Now</a>
           </div>
           <div class="who-we-are-right big-screen-only">
             <h2 class="color-gold">ON A MISSION SINCE 2023</h2>
@@ -118,33 +123,45 @@
           </div>
         </div>
         <div class="our-history">
-          <h2 class="color-gold" data-aos="zoom-in-up">OUR HISTORY</h2>
+          <h2 class="color-gold" data-aos="zoom-in-up">WHERE IT ALL BEGAN</h2>
           <div class="our-history-grid">
             <div class="our-history-left big-screen-only">
-              <h1>Logo</h1>
+              <img class="our-history-img" src="./Images/history.jpg" alt="" />
+              <span class="img-description">
+                "This is the picture when I met Mary(in red collar) in 2023 in
+                Accra"
+              </span>
             </div>
             <div class="our-history-right">
-              <h1 class="logo">Logo</h1>
+              <img class="our-history-img" src="./Images/history.jpg" alt="" />
+              <span class="img-description">
+                "This is the picture when I met Mary(in red collar) in 2023 in
+                Accra"
+              </span>
               <p data-aos="zoom-in-up">
-                Our journey began in 2023, when our founder met Mary Naa-Afi
-                Kofi, a dedicated teacher, at a missionary conference in Accra.
+                In 2023, my heart was deeply moved, when I met Mary Naa Afi
+                Kofi, a devoted teacher, at a missionary conference in Accra.
+                she shared photos of students sitting on classroom floors and
+                crowding around broken desks, yet still eager to learn. Their
+                determination stayed with me and I knew I could not just walk
+                away.
               </p>
-              <p data-aos="zoom-in-up">
-                Through her photos, we saw children learning on the floor or
-                squeezed into broken desks. Inspired by the students’
-                determination and Mary’s unwavering commitment.
+              <p data-aos="zoom-in-up" class="big-screen-only">
+                Friends of Fuo 2 Inc. was born from that moment with a simple
+                commitment to respond when we see a need.
               </p>
-              <p data-aos="zoom-in-up">
-                Friends of Fuo 2Inc. was created to help meet these needs, one
-                classroom at a time. Today, the school seves 497 students from
-                Nursery through Junior High School.
+              <p data-aos="zoom-in-up" class="big-screen-only">
+                This work is about partnership, opportunity, and investing in
+                students who are ready to thrive. Together, we are equipping
+                today and empowering generations.
               </p>
-              <p data-aos="zoom-in-up">
-                In addition to classroom support, we also help students from
-                Ghana pursue higher education, expanding access and opportunity
-                beyond the schoolyard. Together, we are building brighter
-                futures through education, dignity, and care
-              </p>
+              <a
+                href="./html/our-story.html"
+                data-aos="zoom-in-up"
+                class="learn-more-button"
+              >
+                Learn more
+              </a>
             </div>
           </div>
         </div>
@@ -154,24 +171,19 @@
             <div class="mission-vision-card" data-aos="zoom-in-up">
               <h3>OUR MISSION</h3>
               <p>
-                Friends of Fuo 2 Inc. is dedicated to enhancing educational
-                opportunities for students at Fuo AME Zion Basic School in
-                Tamale, Ghana. We provide essential resources such as desks,
-                books, and classroom supplies to create a conducive learning
-                environment. Our mission is to empower students to reach their
-                full potential through access to quality education and
-                supporting students as they pursue higher education.
+                Friends of Fuo 2 Inc. expands educational opportunity at Fuo AME
+                Zion Basic School in Tamale, Ghana by providing essential
+                classroom resources and supporting students as they pursue
+                higher education.
               </p>
             </div>
             <div class="mission-vision-card" data-aos="zoom-in-up">
               <h3>OUR VISION</h3>
               <p>
-                Friends of Fuo 2 Inc. envisions a future where every student has
-                the tools to thrive; From desks and classrooms materials to the
-                support needed to pursue higher education. We believe that
-                quality education should never be limited by resources, and that
-                empowered students create stronger communities and brighter
-                futures
+                We envision a future where every student has the tools to
+                thrive, where education is never never limited by resources, and
+                where empowered students build stronger communities and brighter
+                futures.
               </p>
             </div>
           </div>
