added the impacts page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
   </head>
   <body>
     <nav data-aos="fade-down">
-      <h1>LOGO</h1>
+      <div class="logo-container">
+        <img
+          src="./Images/fof-logo.png"
+          alt="friends of fuo logo"
+          class="logo"
+        />
+      </div>
       <div class="nav-links">
         <a href="index.html" class="nav-link active-link">HOME</a>
         <a href="#about-section" class="nav-link">ABOUT</a>
@@ -225,28 +231,31 @@
               "When Students walk into this classroom, they see who believed in
               them"
             </h2>
-            <p data-aos="zoom-in-up">
-              At Fuo AME Zion Basic School, every classroom tells a story.
-            </p>
-            <p data-aos="zoom-in-up">
-              On the wall is a plaque-listing the names of those who made
-              learning possible in that room. Parents see it. Teachers see it.
-              Students see it.
-            </p>
-            <p data-aos="zoom-in-up">
-              Children grow up knowing:<br />
-              Someone somewhere cared enough to invest in us.
-            </p>
-            <p data-aos="zoom-in-up">
-              This is how generosity becomes memory.<br />
-              This is how impact becomes legacy.
-            </p>
-            <p data-aos="zoom-in-up">
-              When you give to Friends of Fuo 2 Inc., your name isn't filed
-              away, it is honored where learning happens
-            </p>
           </div>
         </div>
+        <section class="our-impact-section">
+          <h2 class="color-gold">OUR IMPACT</h2>
+          <div class="words">
+            <p>
+              Today, Fuo AME Zion Basic School serves 497 students from Nursery
+              through Junior High School
+            </p>
+            <p>Because of supporters like you:</p>
+            <ul>
+              <li>Classrooms now have functional desks</li>
+              <li>Teachers have proper workspaces</li>
+              <li>Students are pursuing higher education</li>
+            </ul>
+          </div>
+          <div class="images">
+            <img src="./Images/donation1.jpg" alt="" />
+            <p class="img-description">
+              "An image showing a desk donation made to Fuo AME Zion Basic
+              School by Friends of Fuo 2 Inc"
+            </p>
+          </div>
+          <a href="./html/impact.html" class="learn-more-button">Learn More</a>
+        </section>
       </section>
       <section class="ongoing-campaigns" data-aos="zoom-in-up">
         <h2 class="color-gold">ONGOING CAMPAIGNS</h2>
