--- a/html/our-story.html
+++ b/html/our-story.html
@@ -18,7 +18,13 @@
   </head>
   <body>
     <nav data-aos="fade-down">
-      <h1>LOGO</h1>
+      <div class="logo-container">
+        <img
+          src="../Images/fof-logo.png"
+          alt="friends of fuo logo"
+          class="logo"
+        />
+      </div>
       <div class="nav-links">
         <a href="../index.html" class="nav-link active-link">HOME</a>
         <a
