--- a/html/impact.html
+++ b/html/impact.html
@@ -79,8 +79,44 @@
       </div>
     </div>
     <main>
-      <div class="section plaque-section">
+      <div class="section donation-story-section">
+        <h2 class="color-gold" data-aos="fade-up">OUR IMPACT</h2>
         <div class="words">
+          <p data-aos="fade-up">
+            Friends of Fuo was created to restore dignity to the learning
+            environment one classroom at a time,
+          </p>
+          <p data-aos="fade-up">
+            As part of our ongoing commitment to improving access to quality
+            education, Friends of Fuo has donated a substantial number of
+            classroom desks to Fuo AME Zion. This intervention is aimed at
+            strengthening the school’s learning infrastructure and creating a
+            more dignified and conducive environment for teaching and learning.
+          </p>
+        </div>
+        <div class="images" data-aos="fade-up">
+          <div class="image">
+            <img
+              src="../Images/donation4.jpg"
+              alt="image of donation made by Friends of Fuo"
+            />
+            <p class="img-description">
+              "Donation of new desks to Fuo AME Zion"
+            </p>
+          </div>
+          <div class="image">
+            <img
+              src="../Images/children-on-new-chairs.jpg"
+              alt="image of donation made by Friends of Fuo"
+            />
+            <p class="img-description">
+              "Children sitting on the new desks donated by Friends of Fuo"
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="section plaque-section">
+        <div class="words" data-aos="zoom-in-up">
           <p data-aos="zoom-in-up">
             At Fuo AME Zion Basic School, every classroom tells a story.
           </p>
@@ -102,7 +138,7 @@
             it is honored where learning happens
           </p>
         </div>
-        <div class="images">
+        <div class="images" data-aos="zoom-in-up">
           <img src="../Images/plaque-in-class.jpg" alt="" />
           <p class="img-description">
             "An Image of a plaque on the classroom wall displaying the names of
@@ -110,7 +146,7 @@
           </p>
         </div>
       </div>
-      <div class="section ways-to-give">
+      <div class="section ways-to-give" data-aos="fade-up">
         <h2 class="color-gold">WAYS TO GIVE</h2>
         <div class="words">
           <h3>Your Gift makes a Direct Difference</h3>
